[tool.poetry]
name = "telemetry-docker-msk-tools"
version = "0.1.0"
description = "Responsible for adding the topicctl & kaf golang binaries into a Docker image"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "telemetry_docker_msk_tools"}]

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"
version-incrementor = "^1.7.0"
cookiecutter = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
